@@ -1,29 +1,19 @@
 """Initialize CMFDiffTool Product"""
 
 import sys
-from Products.CMFCore.DirectoryView import registerDirectory
 from Products.CMFCore import utils
-from Products.CMFCore.permissions import AddPortalContent
 
-import Products.CMFDiffTool.CMFDiffTool
-import Products.CMFDiffTool.FieldDiff
-import Products.CMFDiffTool.TextDiff
-import Products.CMFDiffTool.ListDiff
-import Products.CMFDiffTool.BinaryDiff
-import Products.CMFDiffTool.ChangeSet
-import Products.CMFDiffTool.CMFDTHtmlDiff
-import Products.CMFDiffTool.ATCompoundDiff
+from Products.CMFDiffTool import CMFDiffTool
+from Products.CMFDiffTool import FieldDiff
+from Products.CMFDiffTool import TextDiff
+from Products.CMFDiffTool import ListDiff
+from Products.CMFDiffTool import BinaryDiff
+from Products.CMFDiffTool import CMFDTHtmlDiff
+from Products.CMFDiffTool import ATCompoundDiff
 
 this_module = sys.modules[ __name__ ]
 product_globals = globals()
 tools = ( CMFDiffTool.CMFDiffTool,)
-
-contentConstructors = (ChangeSet.manage_addChangeSet,)
-contentClasses = (ChangeSet.ChangeSet,)
-
-# Make the skins available as DirectoryViews
-registerDirectory('skins', globals())
-registerDirectory('skins/ChangeSet', globals())
 
 CMFDiffTool.registerDiffType(BinaryDiff.BinaryDiff)
 CMFDiffTool.registerDiffType(FieldDiff.FieldDiff)
@@ -37,8 +27,3 @@ def initialize(context):
                     tools = tools,
                     icon='tool.gif' 
                     ).initialize( context )
-
-    utils.ContentInit(ChangeSet.ChangeSet.meta_type,
-                      content_types = contentClasses,
-                      extra_constructors = contentConstructors,
-                      permission = AddPortalContent).initialize(context)
