@@ -1,8 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_skins">
- <object name="ChangeSet" meta_type="Filesystem Directory View"
-    directory="Products.CMFDiffTool:skins/ChangeSet"/>
-  <skin-path name="*">
-  <layer name="ChangeSet" insert-after="custom"/>
- </skin-path>
-</object>
