@@ -1,28 +1,0 @@
-<?xml version="1.0"?>
-<object name="ChangeSet" meta_type="Factory-based Type Information"
-   i18n:domain="cmfdifftool" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
- <property name="title" i18n:translate=""></property>
- <property name="description"
-    i18n:translate="">A collection of changes between two objects</property>
- <property name="content_icon">changeset.png</property>
- <property name="content_meta_type">Change Set</property>
- <property name="product">CMFDiffTool</property>
- <property name="factory">manage_addChangeSet</property>
- <property name="immediate_view">changeset_edit_form</property>
- <property name="global_allow">False</property>
- <property name="filter_content_types">False</property>
- <property name="allowed_content_types"/>
- <property name="allow_discussion">False</property>
- <alias from="(Default)" to="changeset_view"/>
- <alias from="view" to="changeset_view"/>
- <action title="View Changes" action_id="view" category="object"
-    condition_expr="" url_expr="string:${object_url}/changeset_view"
-    visible="True">
-  <permission value="View"/>
- </action>
- <action title="Edit Change set" action_id="edit" category="object"
-    condition_expr="" url_expr="string:${object_url}/changeset_edit_form"
-    visible="True">
-  <permission value="Modify portal content"/>
- </action>
-</object>
