@@ -1,10 +1,0 @@
-##parameters=
-
-ignore_list = [
-    'getRawRelatedItems',
-    'isDiscussable',
-    'getImage',
-    'getFile',
-]
-
-return ignore_list
