@@ -14,7 +14,7 @@ setup(name='Products.CMFDiffTool',
       keywords='Diff Plone',
       author='Brent Hendricks',
       author_email='plone-developers@lists.sourceforge.net',
-      url='http://svn.plone.org/svn/plone/plone.i18n',
+      url='http://pypi.python.org/pypi/Products.CMFDiffTool',
       license='GPL',
       packages=find_packages(exclude=['ez_setup']),
       namespace_packages=['Products'],
@@ -29,10 +29,8 @@ setup(name='Products.CMFDiffTool',
         'setuptools',
         'zope.interface',
         'Products.CMFCore',
-        'Products.CMFDefault',
         'Products.GenericSetup',
         'Acquisition',
-        # 'transaction',
         'Zope2',
       ],
       )
